# trayed

./: CMakeLists.txt  main.cpp
helper/: CMakeLists.txt  helper.cpp  helper.h
src/: main.cpp  win_tray.cpp  win_tray.h
